# wol

./: .gitignore  Cargo.toml  README.md  app-icon.rc  build.rs  config.ini
.github/workflows/: build.yml  rust.yml
src/: config.rs  main.rs  utils.rs
